--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 
 <body>
 
+    <h1>Otro cambio de Diego</h1>
     <p>Hola Mundo</p>
     <p>Hola Diego</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam beatae vel nobis blanditiis eveniet dolore cum veniam nulla, dolorum praesentium sit repellat, culpa nisi exercitationem iure cumque sequi suscipit dignissimos.</p>
 
 </body>
 
