--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Saludos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link type="text/css" rel="stylesheet" href="style.css">
 
 </head>
 
@@ -20,12 +22,103 @@
 
 <body>
 
-    <h1>Otro cambio de Diego</h1>
-    <p>Hola Mundo</p>
-    <p>Hola Diego</p>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam beatae vel nobis blanditiis eveniet dolore cum veniam nulla, dolorum praesentium sit repellat, culpa nisi exercitationem iure cumque sequi suscipit dignissimos.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt aliquid recusandae quas, omnis veniam suscipit amet dolores ipsa perferendis quae mollitia autem ipsum voluptas. Debitis fugiat dolorum mollitia facilis deserunt!</p>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <a class="navbar-brand" href="#">ART</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pinturas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Esculturas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Orfebrería</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Tejidos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Otros</a>
+                </li>
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-success" type="submit">Search</button>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Registrate</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Iniciar sesión</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section class="somos">
+        <br>
+        <p class="galeria">
+            Galeria Grupo Cero
+        </p>
+        <p>
+            Quienes somos: Somos un grupo de artistas plásticos dedicados a la pintura, escultura, orfebrería, tejido y otras expresiones artísticas, que decidimos formar una cooperativa llamada “Grupo Cero”.
+        </p>
+        <p>
+            Te interesa el arte? Bienvenido a nuestro sitio web!
+        </p>
+    </section>
+    <section class="carrusel">
+        <div id="demo" class="carousel slide" data-ride="carousel">
+
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/Escultura.jpg" alt="Escultura">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/Orfebreria.jpg" alt="Orfebreria">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/Pinturas.jpg" alt="Pintutras">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/Tejido.jpg" alt="Tejidos">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/fotografia.jpg" alt="Fotografia">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+
+        </div>
+        <br>
+    </section>
+    <section class="row cafeteria">
+        <div>
+            Grupo Cero Coffe
+        </div>
+        <br>
+        <div class="col-xs-12 col-md-6">
+            <img src="img/cafeteria2.jpg" alt="cafeteria">
+        </div>
+        <div class="col-xs-12 col-md-6">
+            <p>
+                ¿Tienes una idea de diseño genial y te gustaría explicarnosla presencialmente? En nuestra cafeteria hacemos reuniones presenciales con los clientes siempre resguardados por protocolos contra el civid-19. Pueden disfrutan de un ambiente grato y las mejores
+                delicias. Te esperamos!
+            </p>
+        </div>
+    </section>
 
 </body>
 
