--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <br>
     </section>
     <section class="row cafeteria">
-        <div>
+        <div id="grupo">
             Grupo Cero Coffe
         </div>
         <br>
