--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <title>Saludos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&display=swap" rel="stylesheet">
 
 </head>
 
@@ -27,29 +29,23 @@
             <a class="navbar-brand" href="#">ART</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pinturas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Esculturas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Orfebrería</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tejidos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Otros</a>
-                </li>
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-success" type="submit">Search</button>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Registrate</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Iniciar sesión</a>
-                </li>
-            </ul>
+                    <ul class="menu">
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Exposiciones</a></li>
+                        <li>
+                            <a href="#">Proyectos</a>
+                        </li>
+
+                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                        <button class="btn btn-success" type="submit">Search</button>
+                        <li class="nav-item">
+
+                            <a class="nav-link " href="registrarse.html">registrate </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Iniciar sesión</a>
+                        </li>
+                    </ul>
         </nav>
     </header>
     <section class="somos">
@@ -58,7 +54,8 @@
             Galeria Grupo Cero
         </p>
         <p>
-            Quienes somos: Somos un grupo de artistas plásticos dedicados a la pintura, escultura, orfebrería, tejido y otras expresiones artísticas, que decidimos formar una cooperativa llamada “Grupo Cero”.
+            Quienes somos: Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición
+            de nuevos y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
         </p>
         <p>
             Te interesa el arte? Bienvenido a nuestro sitio web!
@@ -67,58 +64,37 @@
     <section class="carrusel">
         <div id="demo" class="carousel slide" data-ride="carousel">
 
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-                <li data-target="#demo" data-slide-to="0" class="active"></li>
-                <li data-target="#demo" data-slide-to="1"></li>
-                <li data-target="#demo" data-slide-to="2"></li>
-            </ul>
-
-            <!-- The slideshow -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/Escultura.jpg" alt="Escultura">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/Orfebreria.jpg" alt="Orfebreria">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/Pinturas.jpg" alt="Pintutras">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/Tejido.jpg" alt="Tejidos">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/fotografia.jpg" alt="Fotografia">
+            <div class=container>
+                <div id="proparallax">
+                    <img class="one" src="img/Escultura.jpg" />
+                    <img class="two" src="img/Orfebreria.jpg" />
+                    <img class="three" src="img/Pinturas.jpg" />
+                    <img class="one" src="img/fotografia.jpg" />
                 </div>
             </div>
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-
         </div>
         <br>
+
+
     </section>
-    <section class="row cafeteria">
+    <section class="rowcafeteria">
         <div id="grupo">
             Grupo Cero Coffe
         </div>
         <br>
-        <div class="col-xs-12 col-md-6">
+        <div class="colxs12colmd6">
             <img src="img/cafeteria2.jpg" alt="cafeteria">
         </div>
-        <div class="col-xs-12 col-md-6">
+        <div class="colxs12colmd6">
+            <br>
+
             <p>
                 ¿Tienes una idea de diseño genial y te gustaría explicarnosla presencialmente? En nuestra cafeteria hacemos reuniones presenciales con los clientes siempre resguardados por protocolos contra el civid-19. Pueden disfrutan de un ambiente grato y las mejores
                 delicias. Te esperamos!
             </p>
         </div>
     </section>
+
 
 </body>
 
