--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
                 <li class="nav-item">
                     <ul class="menu">
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Exposiciones</a></li>
+                        <li><a href="exposiciones.html">Exposiciones</a></li>
                         <li>
                             <a href="#">Proyectos</a>
                         </li>
 
                         <input class="form-control mr-sm-2" type="text" placeholder="Search">
                         <button class="btn btn-success" type="submit">Search</button>
+
                         <li class="nav-item">
 
                             <a class="nav-link " href="registrarse.html">registrate </a>
@@ -100,6 +101,9 @@
             </p>
         </div>
     </section>
+    <br>
+    <br>
+
 
 
 </body>
