--- a/exposiciones.html
+++ b/exposiciones.html
@@ -3,12 +3,9 @@
 <html lang="en">
 
 
-
 <!DOCTYPE html>
 
 <html lang="en">
-
-
 
 <head>
 
@@ -36,7 +33,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <ul class="menu">
-                        <li><a href="#">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="exposiciones.html">Exposiciones</a></li>
                         <li>
                             <a href="#">Proyectos</a>
@@ -84,9 +81,10 @@
 
 
     </section>
+
     <section class="rowcafeteria">
         <div id="grupo">
-            Grupo Cero Coffe
+            fotos de exposiciones
         </div>
         <br>
         <div class="colxs12colmd6">
@@ -100,9 +98,9 @@
                 delicias. Te esperamos!
             </p>
         </div>
+        <div <img src="img/cafeteria2.jpg" alt="cafeteria">
+            ></div>
     </section>
-    <br>
-    <br>
 
 
 
