--- a/exposiciones.html
+++ b/exposiciones.html
@@ -98,10 +98,13 @@
                 delicias. Te esperamos!
             </p>
         </div>
-        <div <img src="img/cafeteria2.jpg" alt="cafeteria">
-            ></div>
     </section>
+    <section>
 
+        <div>
+            <img src="img/cafeteria2.jpg" alt="cafeteria">
+        </div>
+    </section>
 
 
 </body>
