--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <li><a href="#">Inicio</a></li>
                         <li><a href="exposiciones.html">Exposiciones</a></li>
                         <li>
-                            <a href="#">Proyectos</a>
+                            <a href="proyectos.html">Proyectos</a>
                         </li>
 
                         <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -50,7 +50,7 @@
                             <a class="nav-link " href="registrarse.html">registrate </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Iniciar sesión</a>
+                            <a class="nav-link" href="inicio sesion.html">Iniciar sesión</a>
                         </li>
                     </ul>
         </nav>
