--- a/exposiciones.html
+++ b/exposiciones.html
@@ -52,10 +52,10 @@
                     </ul>
         </nav>
     </header>
+
     <section class="somos">
         <br>
-        <p class="galeria">
-            Galeria Grupo Cero
+        <p <h4>bienvenido a nuestara pagina de galeria </h4>
         </p>
         <p>
             Quienes somos: Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición
@@ -65,6 +65,7 @@
             Te interesa el arte? Bienvenido a nuestro sitio web!
         </p>
     </section>
+
     <section class="carrusel">
         <div id="demo" class="carousel slide" data-ride="carousel">
 
