--- a/exposiciones.html
+++ b/exposiciones.html
@@ -55,8 +55,8 @@
 
     <section class="somos">
         <br>
-        <p <h2>bienvenido a nuestara pagina de galeria </h2>
-        </p>
+        <h2>bienvenido a nuestara pagina de galeria </h2>
+        <br>
         <p>
             Quienes somos: Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición
             de nuevos y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
