--- a/exposiciones.html
+++ b/exposiciones.html
@@ -15,7 +15,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Saludos</title>
+    <title>exposiciones</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -55,16 +55,10 @@
 
     <section class="somos">
         <br>
-        <h2>bienvenido a nuestara pagina de galeria </h2>
+        <h2>bienvenido a nuestara pagina de exposiciones </h2>
         <br>
-        <p>
-            Quienes somos: Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición
-            de nuevos y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
-        </p>
-        <p>
-            Te interesa el arte? Bienvenido a nuestro sitio web!
-        </p>
     </section>
+
 
     <section class="carrusel">
         <div id="demo" class="carousel slide" data-ride="carousel">
@@ -74,13 +68,10 @@
                     <img class="one" src="img/Escultura.jpg" />
                     <img class="two" src="img/Orfebreria.jpg" />
                     <img class="three" src="img/Pinturas.jpg" />
-                    <img class="one" src="img/fotografia.jpg" />
                 </div>
             </div>
         </div>
         <br>
-
-
     </section>
 
     <section class="rowcafeteria">
