--- a/exposiciones.html
+++ b/exposiciones.html
@@ -65,9 +65,9 @@
 
             <div class=container>
                 <div id="proparallax">
-                    <img class="one" src="img/Escultura.jpg" />
-                    <img class="two" src="img/Orfebreria.jpg" />
-                    <img class="three" src="img/Pinturas.jpg" />
+                    <img class="one" src="img/arte1.jpg" />
+                    <img class="two" src="img/arte2.jpg" />
+                    <img class="three" src="img/arte3.jpg" />
                 </div>
             </div>
         </div>
