--- a/exposiciones.html
+++ b/exposiciones.html
@@ -80,6 +80,7 @@
         </div>
         <br>
         <div class="colxs12colmd6">
+            <img src="arte1.jpg" width="100" height="100" alt="galeria" />
             <img src="img/cafeteria2.jpg" alt="cafeteria">
         </div>
         <div class="colxs12colmd6">
