--- a/exposiciones.html
+++ b/exposiciones.html
@@ -80,33 +80,16 @@
         </div>
         <br>
         <div class="colxs12colmd6">
-            <img src="img/arte1.jpg" width="40%" height="100" alt="galeria" />
-            <img src="img/cafeteria2.jpg" alt="cafeteria">
-        </div>
-        <div class="colxs12colmd6">
-            <br>
+            <img src="img/arte1.jpg" width="40%" height="25%" alt="galeria" />
 
-            <p>
-                ¿Tienes una idea de diseño genial y te gustaría explicarnosla presencialmente? En nuestra cafeteria hacemos reuniones presenciales con los clientes siempre resguardados por protocolos contra el civid-19. Pueden disfrutan de un ambiente grato y las mejores
-                delicias. Te esperamos!
-            </p>
         </div>
-    </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <section>
 
-        <div>
-            <img src="img/cafeteria2.jpg" alt="cafeteria">
-        </div>
+
+
+
     </section>
 
 
 </body>
-
-
 
 </html>
