--- a/exposiciones.html
+++ b/exposiciones.html
@@ -80,8 +80,10 @@
         </div>
         <br>
         <div class="colxs12colmd6">
-            <img src="img/arte1.jpg" width="40%" height="25%" alt="galeria" />
-
+            <img src="img/joker.jpg" width="40%" height="25%" alt="galeria" />
+            <img src="img/contemporaneo.jpg" width="40%" height="25%" alt="galeria" />
+            <img src="img/contemporaneo2.jpg" width="40%" height="25%" alt="galeria" />
+            <img src="img/chileno.jpg" width="40%" height="25%" alt="galeria" />
         </div>
 
 
