--- a/exposiciones.html
+++ b/exposiciones.html
@@ -76,12 +76,12 @@
 
     <section class="rowcafeteria">
         <div id="grupo">
-            <h4>fotos de exposiciones</h4>
+            <h4>obras en exposiciones</h4>
         </div>
         <br>
         <div class="colxs12colmd6">
-            <img src="img/joker.jpg" width="40%" height="25%" alt="galeria" />
-            <img src="img/contemporaneo.jpg" width="40%" height="25%" alt="galeria" />
+            <img src="img/joker.jpg" width="35%" height="20%" alt="galeria" />
+            <img src="img/contemporaneo.jpg" width="17%" height="25%" alt="galeria" />
             <img src="img/contemporaneo2.jpg" width="40%" height="25%" alt="galeria" />
             <img src="img/chileno.jpg" width="40%" height="25%" alt="galeria" />
         </div>
