--- a/exposiciones.html
+++ b/exposiciones.html
@@ -86,6 +86,9 @@
             <img src="img/chileno.jpg" width="20%" height="25%" alt="galeria" />
         </div>
 
+        <div>
+            <img src="img/chileno.jpg" width="20%" height="25%" alt="galeria" />
+        </div>
 
 
 
