--- a/exposiciones.html
+++ b/exposiciones.html
@@ -80,10 +80,10 @@
         </div>
         <br>
         <div class="colxs12colmd6">
-            <img src="img/joker.jpg" width="35%" height="10%" alt="galeria" />
-            <img src="img/contemporaneo.jpg" width="17%" height="30%" alt="galeria" />
-            <img src="img/contemporaneo2.jpg" width="20%" height="28%" alt="galeria" />
-            <img src="img/chileno.jpg" width="20%" height="25%" alt="galeria" />
+            <img src="img/persona1.jpg" width="35%" height="10%" alt="galeria" />
+            <img src="img/artplastico.jpg" width="17%" height="30%" alt="galeria" />
+            <img src="img/inedita.jpg" width="20%" height="28%" alt="galeria" />
+            <img src="img/paisaje.jpg" width="20%" height="25%" alt="galeria" />
         </div>
 
         <div>
