--- a/registrarse.html
+++ b/registrarse.html
@@ -52,17 +52,17 @@
             <section class="row">
                 <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
                     <!--Formulario Contacto-->
-                    <h1 class="text-center">Formulario Mensajes</h1>
+                    <h1 class="text-center">Formulario registro </h1>
                     <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
                         <fieldset>
                             <div class="cont1">
                                 <br>
-                                <label class="m-1" for="nombre">Nombre:</label>
+                                <label class="m-1" for="nombre">Nombre y apellido :</label>
                                 <input class="ml-2" type="text" id="nombre" name="nombre" placeholder=" Nombres" size="30" required="required">
                                 <br>
                                 <br>
-                                <label class="m-1" for="nombre">Apellidos:</label>
-                                <input class="ml-1" type="text" id="apellido" name="nombre" placeholder=" Apellidos" size="30" required="required">
+                                <label class="m-1" for="nombre">contraseña:</label>
+                                <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
                                 <br>
                                 <br>
                                 <label class="m-1" for="mail">Correo:</label>
@@ -93,13 +93,17 @@
 
 
         </div>
+
         <!--Fin Main Pagina-->
 
     </div>
+
     <hr class="my-5">
     <!--Footer Pagina-->
+
     <div class="container-fluid">
         <footer class="row">
+
             <div class="bg-dark text-white text-center col-12 py-5">
 
             </div>
