--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Iniciar Sesion</title>
+    <title>Contacto</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
@@ -52,7 +52,7 @@
             <section class="row">
                 <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
                     <!--Formulario Contacto-->
-                    <h1 class="text-center">iniciar sesion </h1>
+                    <h1 class="text-center">Contactanos! </h1>
                     <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
                         <fieldset>
                             <div class="cont1">
@@ -60,14 +60,18 @@
                                 <br>
                                 <br>
                                 <br>
-                                <label class="m-1" for="mail">Correo:</label>
-                                <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
+                                <label class="m-1" for="mail">Tipo de arte que deseas:</label>
+                                <input class="ml-3" type="text" id="arte" name="arte" placeholder=" Ej. Orfebreria, Pintura artistica..." size="40" required="required">
                                 <br>
                                 <br>
-                                <label class="m-1" for="nombre">contraseña:</label>
-                                <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
+                                <label class="m-1" for="nombre">Idea de proyecto que deseas:</label>
+                                <input class="ml-1" type="text" id="idea" name="idea" placeholder="Cuentanos en breves palabras tu idea" size="30" required="required">
                                 <br>
                                 <br>
+                                <label class="m-1" for="nombre">Ingresa tus datos para contactarnos contigo:</label>
+                                <input class="ml-1" type="text" id="nombre" name="nombre" placeholder="Nombre completo" size="30" required="required">
+                                <input class="ml-1" type="text" id="correo" name="correo" placeholder="Correo electrónico" size="30" required="required">
+                                <input class="ml-1" type="text" id="numero" name="numero" placeholder="Número de contacto" size="30" required="required">
                                 <br>
                                 <br>
                                 <br>
@@ -76,7 +80,7 @@
 
                         <br>
                         <div id="botones" class="mb-2">
-                            <input class="btn btn-outline-success" type="submit" value="entrar">
+                            <input class="btn btn-outline-success" type="submit" value="Enviar">
                             <input class="boton2 btn btn-outline-danger " type="reset" value="Borrar">
                         </div>
 
