--- a/exposiciones.html
+++ b/exposiciones.html
@@ -36,7 +36,7 @@
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="exposiciones.html">Exposiciones</a></li>
                         <li>
-                            <a href="proyectos.html">Proyectos</a>
+                            <a href="contacto.html">Contacto</a>
                         </li>
 
                         <input class="form-control mr-sm-2" type="text" placeholder="Search">
