--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 
 
 
+<!DOCTYPE html>
+
+<html lang="en">
+
+
+
 <head>
 
     <meta charset="UTF-8">
@@ -12,7 +18,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Saludos</title>
+    <title> Galeria Grupo Cero</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -31,9 +37,9 @@
                 <li class="nav-item">
                     <ul class="menu">
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Exposiciones</a></li>
+                        <li><a href="exposiciones.html">Exposiciones</a></li>
                         <li>
-                            <a href="#">Proyectos</a>
+                            <a href="contacto.html">Contacto</a>
                         </li>
 
                         <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -43,9 +49,10 @@
                             <a class="nav-link " href="registrarse.html">registrate </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Iniciar sesión</a>
+                            <a class="nav-link" href="inicio sesion.html">Iniciar sesión</a>
                         </li>
                     </ul>
+
         </nav>
     </header>
     <section class="somos">
@@ -82,10 +89,10 @@
             Grupo Cero Coffe
         </div>
         <br>
-        <div class="colxs12colmd6">
-            <img src="img/cafeteria2.jpg" alt="cafeteria">
-        </div>
-        <div class="colxs12colmd6">
+
+        <img src="img/cafeteria2.jpg" alt="cafeteria" width="340" heigt="340">
+
+        <div class="colxs12colmd6 ">
             <br>
 
             <p>
@@ -94,6 +101,21 @@
             </p>
         </div>
     </section>
+    <br>
+    <br>
+    <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">Cooperativa Artistica © 2021</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+
 
 
 </body>
