--- a/registrarse.html
+++ b/registrarse.html
@@ -24,82 +24,97 @@
             </header>
             <div class="row">
 
-                <nav class="navbar navbar-expand-md m-0 p-0   text-center navbar-light bg-light col-12 col-md-12 col-lg-12 col-xl-12">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse font-weight-bold " id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item ">
-                                <a class="nav-link " href="index.html">Home </a>
-                            </li>
-                        </ul>
-                    </div>
+
+                </button>
+                <div class="collapse navbar-collapse font-weight-bold " id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <a class="nav-link " href="index.html">Home </a>
+                        </li>
+                    </ul>
+                </div>
                 </nav>
             </div>
-
-
         </div>
-        <!--Fin Header Y Nav-->
+        <div class="overlay">
+            <!-- LOGN IN FORM by Omar Dsoky -->
+            <form>
+                <!--   con = Container  for items in the form-->
+                <div class="con">
+                    <!--     Start  header Content  -->
+                    <header class="head-form">
+                        <h2>Formulario registro</h2>
+                        <!--     A welcome message or an explanation of the login form -->
+                        <p>Te invitamos hacer parte de nosotros</p>
+                    </header>
+                    <!--     End  header Content  -->
+                    <br>
+                    <div class="field-set">
+
+                        <!--   user name -->
+                        <span class="input-item">
+                                        <i class="fa fa-user-circle"></i>
+                                        </span>
+                        <!--   user name Input-->
+                        <input class="form-input" id="txt-input" type="text" placeholder=" Nombre y Apellido" size="30" required="required">
+                        <br>
+                        <input class="form-input" id="txt-input" type="text" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
+                        <br>
+                        <input class="form-input" type="tel" id="telefono" name="telefono" required="required" placeholder="Teléfono 9 dígitos" pattern="[0-9]{9}">
+                        <br>
 
 
 
-        <hr class="my-5">
-        <!--Fin Header Y Nav-->
+                        <!--   Password -->
 
-        <!--MainPagina-->
-        <div class="container">
-            <section class="row">
-                <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
-                    <!--Formulario Contacto-->
-                    <h1 class="text-center">Formulario Mensajes</h1>
-                    <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
-                        <fieldset>
-                            <div class="cont1">
-                                <br>
-                                <label class="m-1" for="nombre">Nombre:</label>
-                                <input class="ml-2" type="text" id="nombre" name="nombre" placeholder=" Nombres" size="30" required="required">
-                                <br>
-                                <br>
-                                <label class="m-1" for="nombre">Apellidos:</label>
-                                <input class="ml-1" type="text" id="apellido" name="nombre" placeholder=" Apellidos" size="30" required="required">
-                                <br>
-                                <br>
-                                <label class="m-1" for="mail">Correo:</label>
-                                <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
-                                <br>
-                                <br>
-                                <label class="m-1" for="telefono">Número de teléfono:</label>
-                                <input type="tel" id="telefono" name="telefono" required="required" placeholder="Teléfono 9 dígitos" pattern="[0-9]{9}">
-                                <br>
-                                <br>
+                        <span class="input-item">
+                                        <i class="fa fa-key"></i>
+                                    </span>
+                        <!--   Password Input-->
+                        <input class="form-input" type="password" placeholder="Password" id="pwd" name="password" required>
 
-                                <label class="m-1" for="text">Descripcion Mensaje:</label>
-                                <br>
-                                <textarea name="mensaje" id="mensaje" placeholder="Ingrese Mensaje de Contacto" cols="60" rows="5" required="required"></textarea>
-                                <br>
-                            </div>
-                        </fieldset>
+                        <!--      Show/hide password  -->
+                        <span>
+                                        <i class="fa fa-eye" aria-hidden="true"  type="button" id="eye"></i>
+                                    </span>
+
 
                         <br>
-                        <div id="botones" class="mb-2">
-                            <input class="btn btn-outline-success" type="submit" value="Enviar">
-                            <input class="boton2 btn btn-outline-danger " type="reset" value="Borrar">
-                        </div>
+                        <!--        buttons -->
+                        <!--      button LogIn -->
+                        <button class="log-in"> Registrar </button>
+                    </div>
+                    <input class="form-input" type="reset" value="Borrar información">
+                    <!--      End Other the Division -->
+                </div>
 
-                    </form>
-                </article>
-
-
-
+                <!--   End Conrainer  -->
         </div>
-        <!--Fin Main Pagina-->
+
+        <!-- End Form -->
+        </form>
+    </div>
+    </div>
+    </fieldset>
+
+    <br>
+    </form>
+    </article>
+
+
 
     </div>
+
+    <!--Fin Main Pagina-->
+
+    </div>
+
     <hr class="my-5">
     <!--Footer Pagina-->
+
     <div class="container-fluid">
         <footer class="row">
+
             <div class="bg-dark text-white text-center col-12 py-5">
 
             </div>
