--- a/exposiciones.html
+++ b/exposiciones.html
@@ -24,33 +24,30 @@
 </head>
 
 
+/* <a class="navbar-brand" href="#">ART</a>*/
+<input class="form-control mr-sm-2" type="text" placeholder="Search">
+<button class="btn btn-success" type="submit">Search</button>
 
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <a class="navbar-brand" href="#">ART</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <ul class="menu">
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="exposiciones.html">Exposiciones</a></li>
-                        <li>
-                            <a href="proyectos.html">Proyectos</a>
-                        </li>
 
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                        <button class="btn btn-success" type="submit">Search</button>
-
-                        <li class="nav-item">
-
-                            <a class="nav-link " href="registrarse.html">registrate </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="inicio sesion.html">Iniciar sesión</a>
-                        </li>
-                    </ul>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="exposiciones.html">Exposiciones</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="registrarse.html">Registrarse</a>
+            <a href="inicio sesion.html">Iniciar Sesion</a>
         </nav>
+        <section class="textos-header">
+            <h1>Galeria Grupo Cero</h1>
+            <h2>Deleitate con el arte al alcance de tus manos</h2>
+        </section>
+        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #FDCA40;"></path>
+            </svg></div>
+    </header>
     </header>
 
     <section class="somos">
