--- a/exposiciones.html
+++ b/exposiciones.html
@@ -24,9 +24,7 @@
 </head>
 
 
-/* <a class="navbar-brand" href="#">ART</a>*/
-<input class="form-control mr-sm-2" type="text" placeholder="Search">
-<button class="btn btn-success" type="submit">Search</button>
+
 
 <body>
 
@@ -38,7 +36,11 @@
             <a href="contacto.html">Contacto</a>
             <a href="registrarse.html">Registrarse</a>
             <a href="inicio sesion.html">Iniciar Sesion</a>
+            <a class="navbar-brand" href="#">BUSCA TU OBRA</a>
+            <input class="form-control mr-sm-2" type="text" placeholder="buscar obra">
+            <button class="btn btn-success" type="submit">buscar</button>
         </nav>
+
         <section class="textos-header">
             <h1>Galeria Grupo Cero</h1>
             <h2>Deleitate con el arte al alcance de tus manos</h2>
