--- a/exposiciones.html
+++ b/exposiciones.html
@@ -38,15 +38,19 @@
             <a href="inicio sesion.html">Iniciar Sesion</a>
         </nav>
 
-
         <section class="textos-header">
             <h1>Galeria Grupo Cero</h1>
             <h2>Deleitate con el arte al alcance de tus manos</h2>
         </section>
-        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+
+        <div class="wave" style="height: 150px; overflow: hidden;">
+            <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #FDCA40;"></path>
-            </svg></div>
+                    style="stroke: none; fill: #FDCA40;">
+                </path>
+            </svg>
+        </div>
+
     </header>
 
 
@@ -57,7 +61,7 @@
     </section>
 
 
-    <section class="carrusel">
+    <section class="carrusel" height: 60%>
         <div id="demo" class="carousel slide" data-ride="carousel">
 
             <div class=container>
@@ -72,6 +76,7 @@
     </section>
 
     <section class="rowcafeteria">
+
         <div id="grupo">
             <h4>obras en exposiciones</h4>
         </div>
