--- a/registrarse.html
+++ b/registrarse.html
@@ -11,86 +11,79 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-
-        <!--Header Y Nav-->
-        <div class="contariner-fluid">
-
-            <header class="row">
-
-            </header>
-
-            <div class="row">
-
-                <nav class="navbar navbar-expand-md m-0 p-0   text-center navbar-light bg-light col-12 col-md-12 col-lg-12 col-xl-12">
 
 
-                    <a class="nav-link " href="index.html">Home </a>
+    <header>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="exposiciones.html">Exposiciones</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="registrarse.html">Registrarse</a>
+            <a href="inicio sesion.html">Iniciar Sesion</a>
+        </nav>
+        <section class="textos-header">
+            <h1>Galeria Grupo Cero</h1>
+            <h2>Deleitate con el arte al alcance de tus manos</h2>
+        </section>
+        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #FDCA40;"></path>
+            </svg></div>
+    </header>
 
 
-                </nav>
+    <!--MainPagina-->
+    <div class="container">
+        <section class="row">
+            <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
+                <!--Formulario Contacto-->
+                <h1 class="text-center">Formulario registro </h1>
+                <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
+                    <fieldset>
+                        <div class="cont1">
+                            <br>
+                            <label class="m-1" for="nombre">Nombre y apellido :</label>
+                            <input class="ml-2" type="text" id="nombre" name="nombre" placeholder=" Nombres" size="30" required="required">
+                            <br>
+                            <br>
+                            <label class="m-1" for="nombre">contraseña:</label>
+                            <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
+                            <br>
+                            <br>
+                            <label class="m-1" for="mail">Correo:</label>
+                            <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
+                            <br>
+                            <br>
+                            <label class="m-1" for="telefono">Número de teléfono:</label>
+                            <input type="tel" id="telefono" name="telefono" required="required" placeholder="Teléfono 9 dígitos" pattern="[0-9]{9}">
+                            <br>
+                            <br>
 
-            </div>
-
-
-        </div>
-        <!--Fin Header Y Nav-->
-
-
-
-        <hr class="my-5">
-        <!--Fin Header Y Nav-->
-
-        <!--MainPagina-->
-        <div class="container">
-            <section class="row">
-                <article class="border mt-5 col-12 col-md-12 col-lg-6 col-xl-6">
-                    <!--Formulario Contacto-->
-                    <h1 class="text-center">Formulario registro </h1>
-                    <form action="" method="post" class=" col-12 col-md-12 col-lg-12 col-xl-12">
-                        <fieldset>
-                            <div class="cont1">
-                                <br>
-                                <label class="m-1" for="nombre">Nombre y apellido :</label>
-                                <input class="ml-2" type="text" id="nombre" name="nombre" placeholder=" Nombres" size="30" required="required">
-                                <br>
-                                <br>
-                                <label class="m-1" for="nombre">contraseña:</label>
-                                <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
-                                <br>
-                                <br>
-                                <label class="m-1" for="mail">Correo:</label>
-                                <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
-                                <br>
-                                <br>
-                                <label class="m-1" for="telefono">Número de teléfono:</label>
-                                <input type="tel" id="telefono" name="telefono" required="required" placeholder="Teléfono 9 dígitos" pattern="[0-9]{9}">
-                                <br>
-                                <br>
-
-                                <label class="m-1" for="text">Descripcion Mensaje:</label>
-                                <br>
-                                <textarea name="mensaje" id="mensaje" placeholder="Ingrese Mensaje de Contacto" cols="60" rows="5" required="required"></textarea>
-                                <br>
-                            </div>
-                        </fieldset>
-
-                        <br>
-                        <div id="botones" class="mb-2">
-                            <input class="btn btn-outline-success" type="submit" value="Enviar">
-                            <input class="boton2 btn btn-outline-danger " type="reset" value="Borrar">
+                            <label class="m-1" for="text">Descripcion Mensaje:</label>
+                            <br>
+                            <textarea name="mensaje" id="mensaje" placeholder="Ingrese Mensaje de Contacto" cols="60" rows="5" required="required"></textarea>
+                            <br>
                         </div>
+                    </fieldset>
 
-                    </form>
-                </article>
+                    <br>
+                    <div id="botones" class="mb-2">
+                        <input class="btn btn-outline-success" type="submit" value="Enviar">
+                        <input class="boton2 btn btn-outline-danger " type="reset" value="Borrar">
+                    </div>
+
+                </form>
+            </article>
 
 
-
-        </div>
-
-        <!--Fin Main Pagina-->
 
     </div>
+
+    <!--Fin Main Pagina-->
+
+    </div>
+
+
 
     <hr class="my-5">
     <!--Footer Pagina-->
