--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
     <!-- este es el mapa-->
 
+    <div id="map"></div>
     <script src="script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
 
