--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
             <h1>Galeria Grupo Cero</h1>
             <h2>Deleitate con el arte al alcance de tus manos</h2>
         </section>
+        <!-- parte ondeada de la pagina-->
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
                     style="stroke: none; fill: #FDCA40;"></path>
-            </svg></div>
+            </svg>
+        </div>
+
     </header>
     <section class="somos">
         <p id="galeria">
@@ -105,12 +108,6 @@
                 </div>
             </div>
 
-        </div>
-
-        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-            <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                style="stroke: none; fill: #000000;"></path>
-        </svg>
         </div>
 
     </section>
