--- a/inicio sesion.html
+++ b/inicio sesion.html
@@ -47,29 +47,14 @@
                         </div>
                         <div class="form-group">
                             <label for="contraseña">Contraseña: </label>
-                            <input type="contraseña" class="form-control" id="contraseña" name="contraseña" placeholder="*******">
-
-                            <br>
-                            <br>
-                            <br>
-                            <label class="m-1" for="mail">Correo:</label>
-                            <input class="ml-3" type="email" id="mail" name="mail" placeholder=" email@ejemplo.com" size="40" required="required" autofocus pattern="[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*@[a-zA-Z0-9_]+([.][a-zA-Z0-9_]+)*[.][a-zA-Z]{1,5}">
-                            <br>
-                            <br>
-                            <label class="m-1" for="nombre">contraseña:</label>
-                            <input class="ml-1" type="text" id="contraseña" name="contraseña" placeholder="contraseña" size="30" required="required">
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
+                            <input type="contraseña" class="form-control" id="contraseña" name="contraseña" placeholder="*******
                         </div>
                 </fieldset>
 
                 <br>
-                <div id="botones" class="mb-2">
-                    <input class="btn btn-outline-success" type="submit" value="entrar">
-                    <input class="boton2 btn btn-outline-danger " type="reset" value="Borrar">
+                <div id=" botones " class="mb-2 ">
+                    <input class="btn btn-outline-success " type="submit " value="entrar ">
+                    <input class="boton2 btn btn-outline-danger " type="reset " value="Borrar ">
                 </div>
 
             </form>
@@ -81,10 +66,10 @@
 
         <!--Footer Pagina-->
 
-        <div class="container-fluid">
-            <footer class="row">
+        <div class="container-fluid ">
+            <footer class="row ">
 
-                <div class="bg-dark text-white text-center col-12 py-5">
+                <div class="bg-dark text-white text-center col-12 py-5 ">
 
                 </div>
             </footer>
