--- a/index.html
+++ b/index.html
@@ -123,13 +123,12 @@
         <section class="ideas">
             <div id="map"></div>
 
-            <h1>¿Tienes una idea de diseño genial y te gustaría explicarnosla presencialmente? En nuestra cafeteria hacemos reuniones presenciales con los clientes siempre resguardados por protocolos contra el civid-19. Pueden disfrutan de un ambiente grato
-                y las mejores delicias. Te esperamos!</h1>
+            <!-- <h1>¿Tienes una idea de diseño genial y te gustaría explicarnosla presencialmente? En nuestra cafeteria hacemos reuniones presenciales con los clientes siempre resguardados por protocolos contra el civid-19. Pueden disfrutan de un ambiente grato
+                y las mejores delicias. Te esperamos!</h1>-->
 
         </section>
 
     </section>
-
 
     <!-- dejamos el footer abajo-->
     <div class="footer-basic">
