--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 
     </section>
 
+    <section class="rowcafeteria">
+        <h1>Grupo Cero Coffe</h1>
+    </section>
+
+
+
     <!-- dejamos el footer abajo-->
     <div class="footer-basic">
         <footer>
