--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div id="map"></div>
         <script src="script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
-
+        <h1 float: right;>Grupo Cero Coffe</h1>
 
 
     </section>
@@ -125,9 +125,6 @@
     <br>
     <br>
 
-    <section class="rowcafeteria">
-        <h1>Grupo Cero Coffe</h1>
-    </section>
 
 
 
