--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
         <script src="script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
         <p>
-            <h1>Grupo Cero Coffe</h1>
+            <H1 align="right"> Grupo cero cofee </H1>
+
         </p>
 
 
