--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
 
     <section class="rowcafeteria">
 
+        <script src="script.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
+        </script>
 
         <div id="map"></div>
-        <script src="script.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap"></script>
         <p>
             <H1 align="right"> Grupo cero cofee </H1>
 
