--- a/index.html
+++ b/index.html
@@ -118,13 +118,16 @@
         <script src="script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
         </script>
+
+
+
+    </section>
+    <div>
         <p>
             <H1 align="right"> Grupo cero cofee </H1>
 
         </p>
-
-
-    </section>
+    </div>
 
 
     <!-- dejamos el footer abajo-->
