--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
         </script>
 
-        <div>
+        <div class="row">
             <p>
                 <H1 align="right"> Grupo cero cofee </H1>
 
