--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
         <div class="row">
             <p>
-                <H1 align="right"> Grupo cero cofee </H1>
+                <H1> Grupo cero cofee </H1>
 
             </p>
         </div>
