--- a/index.html
+++ b/index.html
@@ -112,18 +112,17 @@
 
     <section class="rowcafeteria">
 
-
-
         <div id="map"></div>
         <script src="script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMap">
         </script>
-        <div height: 390px width: 39%;>
 
-            <h1>hlas </h1>
-        </div>
+
+
     </section>
-
+    <div class="texton">
+        <h1>hlas </h1>
+    </div>
 
 
     <!-- dejamos el footer abajo-->
