--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
 
     <section class="rowcafeteria">
 
-
+        <div>
+            <h1>hlas </h1>
+        </div>
 
 
 
     </section>
-    <div class="texton">
-        <h1>hlas </h1>
-    </div>
+
 
 
     <!-- dejamos el footer abajo-->
