--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="texton">
         <h1>grupo cero cofee</h1>
         <br>
-        <h5 align="center">
+        <h5 align="center" style="color:white;">
             <p>en estos momentos de pandemia nos encontramos cerrados pero estemos en fase 1 </p>
             <p>podras visitarnos con el aforo correspondiente </p>
             <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
