--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h1>grupo cero cofee</h1>
         <br>
         <h5 align="center" style="color:white;">
-            <p>en estos momentos de pandemia nos encontramos cerrados pero estemos en fase 1 </p>
+            <p>en estos momentos de pandemia nos encontramos cerrados pero en fase 3 </p>
             <p>podras visitarnos con el aforo correspondiente </p>
             <p>hablaremos tanto de arte digital como posibles negocios y futuras subastas que se realizaran en el mismo cafe</p>
             <p>te esperamos </p>
