--- a/exposiciones.html
+++ b/exposiciones.html
@@ -54,11 +54,11 @@
     </header>
 
 
-    <section>
+    <section class="carrusel" height: 60%>
 
         <div id="demo" class="carousel slide" data-ride="carousel">
 
-            <div class=container>
+            <div class=container float:right>
                 <div id="proparallax">
                     <img class="one" src="img/arte1.jpg" />
                     <img class="two" src="img/arte2.jpg" />
