--- a/exposiciones.html
+++ b/exposiciones.html
@@ -54,20 +54,20 @@
     </header>
 
 
-    <section class="carrusel" height: 60%>
+    <div id="demo" class="carousel slide" data-ride="carousel">
 
-        <div id="demo" class="carousel slide" data-ride="carousel">
-
-            <div class=container float:right>
-                <div id="proparallax">
-                    <img class="one" src="img/arte1.jpg" />
-                    <img class="two" src="img/arte2.jpg" />
-                    <img class="three" src="img/arte3.jpg" />
-                </div>
+        <div class=container>
+            <div id="proparallax">
+                <img class="one" src="img/arte1.jpg" />
+                <img class="two" src="img/arte2.jpg" />
+                <img class="three" src="img/arte3.jpg" />
             </div>
         </div>
-        <br>
-    </section>
+    </div>
+    <br>
+
+
+
 
     <section class="rowcafeteria">
 
