--- a/exposiciones.html
+++ b/exposiciones.html
@@ -53,11 +53,14 @@
 
     </header>
 
-    <div class="exp">
+    <section class="exp">
+
 
         <h1 style="color: black;">noticias noticias ¡</h1>
 
-    </div>
+
+    </section>
+
 
 
 
