--- a/exposiciones.html
+++ b/exposiciones.html
@@ -53,16 +53,18 @@
     </header>
 
     <section>
-        <p id="galeria">
-            Quienes somos
-        </p>
-        <p>
-            Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición de nuevos
-            y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
-        </p>
-        <p>
-            Te interesa el arte? Bienvenido a nuestro sitio web!
-        </p>
+        <div class="exp">
+            <p id="galeria">
+                Quienes somos
+            </p>
+            <p>
+                Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición de
+                nuevos y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
+            </p>
+            <p>
+                Te interesa el arte? Bienvenido a nuestro sitio web!
+            </p>
+        </div>
     </section>
 
 
