--- a/exposiciones.html
+++ b/exposiciones.html
@@ -58,15 +58,11 @@
 
     <section>
         <div class="exp">
-            <p id="galeria">
-                Quienes somos
-            </p>
             <p>
-                Somos un grupo de artistas plásticos dedicados a distintas expresiones artísticas,decidimos formar una cooperativa llamada “Grupo Cero”. <br> <br> "Grupo Cero " es un espacio de arte moderno y vanguardista, destinado a la exhibición de
-                nuevos y consagrados talentos contemporáneos. Se destaca por ser un lugar abierto a distintas disciplinas artisticas, tales como; pintura, escultura, ofreberia,tejidos.
-            </p>
-            <p>
-                Te interesa el arte? Bienvenido a nuestro sitio web!
+                Es un agrado para nosotros contarte que existe el arte digital y que ya existio una subasta por mas de 1 millon de dolares esto gracias a la tecnologia blockain y es por eso que estas invitado a ver la noticia completa en el link que te dejaremos y para
+                saber como y a que precio se encuentras estas monedas digitales te dejamos una casilla donde puedes consultar cualquier percio de las criptomonedas en base al dolar o euro . ten en cuenta que para que te hagas una idea pondremos el precio
+                de referencia de algunas de nuestras obras en lo que seria un "token" o tambien en bitcoin .
+
             </p>
         </div>
     </section>
@@ -77,28 +73,22 @@
     <br>
     <br>
     <br>
-
     <br>
     <br>
     <br>
     <br>
-
     <br>
     <br>
     <br>
     <br>
-
     <br>
     <br>
     <br>
     <br>
-
     <br>
     <br>
     <br>
     <br>
-
-
 
     <section class="rowcafeteria">
 
