--- a/exposiciones.html
+++ b/exposiciones.html
@@ -64,6 +64,7 @@
                 saber como y a que precio se encuentras estas monedas digitales te dejamos una casilla donde puedes consultar cualquier percio de las criptomonedas en base al dolar o euro . ten en cuenta que para que te hagas una idea pondremos el precio
                 de referencia de algunas de nuestras obras en lo que seria un "token" o tambien en bitcoin .
             </p>
+            <a href="https://www.genbeta.com/actualidad/revolucion-nft-arte-pagan-1-36-millones-euros-pixel-gris-subasta">aqui el link ;)</a>
         </div>
     </section>
 
