--- a/exposiciones.html
+++ b/exposiciones.html
@@ -20,7 +20,9 @@
 
     <!--de aqui para abajo va las referencias para la api -->
 
-
+    <link href="https://bootswatch.com/4/sandstone/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
 
 </head>
 
