--- a/exposiciones.html
+++ b/exposiciones.html
@@ -153,65 +153,73 @@
 
                 <!--.formulario-cotizar-->
                 <div class="panel-resultados row justify-content-center mt-5">
-                    <div class="contenido-spinner">
+                    <div class="contenido-spinner" style="display: none;">
                         <div class="spinner">
                             <div class="cube1"></div>
                             <div class="cube2"></div>
                         </div>
                     </div>
                     <div class="mensajes col-12"></div>
-                    <div id="resultado" class="col-12"></div>
+                    <div id="resultado" class="col-12">
+                        <div class="card bg-warning">
+                            <div class="card-body text-light">
+                                <img src="https://www.cryptocompare.com/media/35650717/42.jpg" width="100" height="100">
+                                <h2 class="card-title">Resultado:</h2>
+                                <p>El Precio de 42 a moneda USD es de: $790000.00
+                                </p>
+                                <p>Variación último día: %0.00</p>
+                                <p>Última actualización: 12/24/2020</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <!--panel-resultados-->
-            </form>
-        </div>
-    </div>
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
-    <section class="rowcafeteria">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
 
-        <br>
-        <div class="colxs12colmd6">
-            <img src="img/joker.jpg" width="35%" height="10%" alt="galeria" />
-            <img src="img/contemporaneo.jpg" width="17%" height="30%" alt="galeria" />
-            <img src="img/contemporaneo2.jpg" width="20%" height="28%" alt="galeria" />
-            <img src="img/chileno.jpg" width="20%" height="25%" alt="galeria" />
-        </div>
+                <section class="rowcafeteria">
 
-        <div>
-            <img src="img/persona1.jpg" width="20%" height="25%" alt="galeria" />
-            <img src="img/artplastico.jpg" width="17%" height="30%" alt="galeria" />
-            <img src="img/inedita.jpg" width="20%" height="28%" alt="galeria" />
-            <img src="img/paisaje.jpg" width="20%" height="25%" alt="galeria" />
-        </div>
+                    <br>
+                    <div class="colxs12colmd6">
+                        <img src="img/joker.jpg" width="35%" height="10%" alt="galeria" />
+                        <img src="img/contemporaneo.jpg" width="17%" height="30%" alt="galeria" />
+                        <img src="img/contemporaneo2.jpg" width="20%" height="28%" alt="galeria" />
+                        <img src="img/chileno.jpg" width="20%" height="25%" alt="galeria" />
+                    </div>
 
-    </section>
+                    <div>
+                        <img src="img/persona1.jpg" width="20%" height="25%" alt="galeria" />
+                        <img src="img/artplastico.jpg" width="17%" height="30%" alt="galeria" />
+                        <img src="img/inedita.jpg" width="20%" height="28%" alt="galeria" />
+                        <img src="img/paisaje.jpg" width="20%" height="25%" alt="galeria" />
+                    </div>
+
+                </section>
 
 
 
-    <!-- dejamos el footer abajo-->
-    <div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Home</a></li>
-                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-            </ul>
-            <p class="copyright">Cooperativa Artistica © 2021</p>
-        </footer>
-    </div>
+                <!-- dejamos el footer abajo-->
+                <div class="footer-basic">
+                    <footer>
+                        <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><a href="#">Home</a></li>
+                            <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+                        </ul>
+                        <p class="copyright">Cooperativa Artistica © 2021</p>
+                    </footer>
+                </div>
 
 </body>
 
