--- a/exposiciones.html
+++ b/exposiciones.html
@@ -65,6 +65,12 @@
                 de referencia de algunas de nuestras obras en lo que seria un "token" o tambien en bitcoin .
             </p>
             <a href="https://www.genbeta.com/actualidad/revolucion-nft-arte-pagan-1-36-millones-euros-pixel-gris-subasta">aqui el link ;)</a>
+            <br>
+            <p>joker(token) : 12 btc</p>
+            <br>
+            <p>pintura renacentista "niño mirando cielo ": 60 btc</p>
+            <br>
+            <p>capilla rupestre chilena : 25 ltcoin</p>
         </div>
     </section>
 
